test/libhyperion/syntaxTests/receiveQuanta/arguments.hyp
contract C {
    receive(uint256) external payable {}
}
// ----
// DeclarationError 6857: (24-33): Receive quanta function cannot take parameters.
